@@ -27,22 +27,15 @@
             <div class="radio">
                 <label>
                     <input type="radio" name="host_url" id="host_url_prod"
-                           value="https://mediathread.ccnmtl.columbia.edu" checked>
-                    https://mediathread.ccnmtl.columbia.edu
-                </label>
-            </div>
-            <div class="radio">
-                <label>
-                    <input type="radio" name="host_url" id="host_url_qa"
-                           value="https://mediathread.qa.ccnmtl.columbia.edu">
-                    https://mediathread.qa.ccnmtl.columbia.edu
+                           value="https://mediathread.ctl.columbia.edu" checked>
+                    https://mediathread.ctl.columbia.edu
                 </label>
             </div>
             <div class="radio">
                 <label>
                     <input type="radio" name="host_url" id="host_url_stage"
-                           value="https://mediathread.stage.ccnmtl.columbia.edu">
-                    https://mediathread.stage.ccnmtl.columbia.edu
+                           value="https://mediathread.stage.ctl.columbia.edu">
+                    https://mediathread.stage.ctl.columbia.edu
                 </label>
             </div>
             <div class="radio">
